--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <header>
       <div class="container">
-        <img src="img/logo.png" class="logo" alt="">
+        <a class="brand" href="">My Room</a>
+        <span class="brand">Online social networking service</span>
         <form class="form-inline">
           <div class="form-group">
             <label class="sr-only" for="exampleInputEmail3">Email address</label>
@@ -55,7 +56,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
- 
+
     <section>
        <div class="container">
          <div class="row">
@@ -69,7 +70,7 @@
                    <div class="form-group">
                      <textarea class="form-control" placeholder="Write on the wall"></textarea>
                    </div>
-                   
+
                    <button type="submit" class="btn btn-default">Submit</button>
                    <div class="pull-right">
                      <div class="btn-group">
@@ -218,7 +219,7 @@
                </div>
              </div>
            </div><!-- col-md-8 end -->
-          
+
            <div class="col-md-4">
              <div class="panel panel-default friends">
                <div class="panel-heading">
@@ -274,7 +275,7 @@
          </div>
        </div>
     </section>
- 
+
     <footer>
       <div class="container">
         <p>Dobble Copyright &copy; 2015, All Rights Reserved</p>
